feat: Add DivinationCard and RewardTooltip components with styling
- Implemented DivinationCard component to display card details including rewards and flavor text.
- Added RewardTooltip component for displaying detailed information about rewards with cycling functionality.
- Created GrandSpectrumData and RewardData files to manage unique item data and rewards.
- Developed CSS styles for DivinationCard and RewardTooltip for consistent UI presentation.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,6 +11,33 @@
 			],
 			"isBackground": false,
 			"group": "build"
+		},
+		{
+			"label": "append_css",
+			"type": "shell",
+			"command": "echo \"/* Separator */\n.divination-card-separator {\n  position: absolute;\n  top: 435px;\n  left: 50%;\n  transform: translateX(-50%);\n  width: 300px;\n  height: 1px;\n  background: linear-gradient(90deg, transparent, #555, transparent);\n  z-index: 20;\n}\" >> src/styles/DivinationCard.css",
+			"args": [],
+			"isBackground": false,
+			"problemMatcher": [],
+			"group": "none"
+		},
+		{
+			"label": "append_css_small_text",
+			"type": "shell",
+			"command": "echo \"\n.divination-card-flavor.small-text {\n  font-size: 13px;\n}\" >> src/styles/DivinationCard.css",
+			"args": [],
+			"isBackground": false,
+			"problemMatcher": [],
+			"group": "none"
+		},
+		{
+			"label": "css-update",
+			"type": "shell",
+			"command": "echo \"CSS update\"",
+			"args": [],
+			"isBackground": false,
+			"problemMatcher": [],
+			"group": "build"
 		}
 	]
 }
