Add comprehensive styles for Discussion Page components
- Implement styles for the discussion page wrapper, including layout and typography.
- Design post form and comment input areas with responsive and user-friendly styles.
- Create styles for posts list, including post cards, headers, and actions.
- Enhance comments section with improved layout and hover effects.
- Introduce styles for nested replies and comment forms, ensuring consistent spacing and alignment.
- Add scrollbar styles for input and post content areas.
- Ensure accessibility by removing focus outlines and adjusting button states.
- Refine post header and main section styles to prevent layout issues during expansion.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -38,6 +38,27 @@
 			"isBackground": false,
 			"problemMatcher": [],
 			"group": "build"
+		},
+		{
+			"label": "append_css_no_hover",
+			"type": "shell",
+			"command": "echo \"\n.comment-header.no-hover:hover {\n  background: transparent !important;\n}\n\" >> src/styles/DiscussionPage.css",
+			"args": [],
+			"group": "none"
+		},
+		{
+			"label": "append_css_post_confirm",
+			"type": "shell",
+			"command": "echo \"\n/* Post Edit/Delete Password Input Background */\n.post-confirm-box input {\n  background: var(--input-bg); /* Change this color */\n}\n\" >> src/styles/DiscussionPage.css",
+			"args": [],
+			"group": "none"
+		},
+		{
+			"label": "append_css_post_confirm",
+			"type": "shell",
+			"command": "echo \"\n/* Post Edit/Delete Password Input Background */\n.post-actions-footer .delete-confirm-box input {\n  background: var(--input-bg); /* Change this color */\n  height: 30px;\n}\n\n.post-actions-footer .delete-confirm-box button {\n  height: 30px;\n}\n\" >> src/styles/DiscussionPage.css",
+			"args": [],
+			"group": "none"
 		}
 	]
 }
