--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@upstash/redis": "^1.35.7",
     "framer-motion": "^12.23.24",
     "next": "16.0.3",
+    "pako": "^2.1.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0"
